26 August 2024
lst$ function fails if given a symbol without a binding.

15 August 2024
Fixed bug in yesterday's new code (mop$ function).

14 August 2024
map$, mop$ and vap$ functions can take empty string as `map function'. Result:
elements passed on unchanged.
mop$ does (merge) sort output if the separating operator in the output list
is + or *.

9 August 2024
(minor change) Moved binary | (OR) operation out of loop in mop$ function.

8 August 2024
The mop$ function can take an extra argument that indicates the operator to be
used to separate the elements in the output.

1 August 2024
tme$ function gives local time. tme$GMT gives UTC (Coordinated Universal Time).
Output contains all fields in C's tm struct, but with month, year, day of the
week day and day of the year given in conventional ranges instead of starting
from 0. 

25 July 2024
UFP export function accepts more formats: "%f" or F, %a or H, N, Q and %e or R. 

25 January 2024
toML function: Removed the space before the slash in empty tags (void elements).
nestML function: If a </html> tag is present, make sure there also is a <html> tag
nestML function: explicitly close non-empty elements such as in <p>abra<p>cadabra.

14 November 2023
Improved error messages when something is wrong in function call in UFP object.

13 November 2023
Fixed signed/unsigned bug in FPU that could result in a negative denominator
due to left shifting a large enough positive number by 52 bits.

10 November 2023
Embed `normal' Bracmat expression in UFP object using eval'(expression).
For now, no value is passed to or returned from eval. (This might change.)
Expression can export data from UFP object.

12 October 2023
Fixed: argument of 'idx$(array, args)' can be complex expression that evaluates
to a number. 

9 October 2023
Minor fix of indentation algorithm.

27 September 2023
numbercheck: Accept hexadecimal floating point notation: chars a-f A-F.

26 September 2023